Added BankJsonSerializer
Added BankJsonSerializer to abstract serialization ob objects in the
server resources methods
Updated server resource classes to use new serialization methods
Fixed imports
Updated TODO.md